[gd_scene load_steps=2 format=3 uid="uid://byuh7jluiwa7x"]

[ext_resource type="Script" path="res://ui/Player/panel_safe_animals.gd" id="1_4e2r6"]

[node name="Panel_SafeAnimals" type="Panel"]
custom_minimum_size = Vector2(0, 130)
offset_right = 174.0
offset_bottom = 130.0
script = ExtResource("1_4e2r6")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 7.0
offset_top = 6.0
offset_right = 166.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 32
text = "Safe Animals"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 49.0
offset_right = -20.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "In Kennels"

[node name="Label2_Kennels" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "0 / 0"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "In Barns"

[node name="Label2_Barns" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "0 / 0"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "In Dens"

[node name="Label2_Dens" type="Label" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "0 / 0"
